<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    tools:context=".AddItemActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/titleBarContainer"
        android:name="com.b07group47.taamcollectionmanager.TitleBarFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_title_bar" />

    <EditText
        android:id="@+id/editTextLotNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lot_number"
        app:layout_constraintTop_toBottomOf="@id/titleBarContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLotNumber" />

    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Category"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:layout_editor_absoluteX="-3dp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_Description"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/editTextCategory"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_Period"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        tools:layout_editor_absoluteX="-1dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPeriod" />

</androidx.constraintlayout.widget.ConstraintLayout>
