<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenStyle"
    tools:context="com.b07group47.taamcollectionmanager.HomeFragment">

<!--    <Button-->
<!--        android:id="@+id/buttonRecyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/recyclerview"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/buttonScroller"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:rowCount="3">

        <LinearLayout
            android:layout_rowWeight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">
            <Button
                android:id="@+id/buttonAdmin"
                style="@style/ButtonStyle"
                android:text="@string/admin" />
        </LinearLayout>

        <LinearLayout
            android:layout_rowWeight="8"
            android:gravity="center"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/data_table"
                style="@style/ButtonStyle"
                android:text="@string/data_table" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_rowWeight="1"
            android:columnCount="1"
            android:rowCount="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:gravity="center"
                android:divider="@drawable/grid_divider">
                <Button
                    android:id="@+id/buttonView"
                    style="@style/ButtonStyle"
                    android:text="@string/view_items"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/buttonSearch"
                    style="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:text="@string/search_items" />

                <Button
                    android:id="@+id/buttonReport"
                    style="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:text="Report" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:gravity="center"
                android:divider="@drawable/grid_divider">
                <Button
                    android:id="@+id/buttonAddItem"
                    style="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:text="@string/add_item"/>

                <Button
                    android:id="@+id/buttonDeleteItem"
                    style="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:text="@string/delete_item"/>

                <Button
                    android:id="@+id/buttonBack"
                    style="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:text="@string/back" />
            </LinearLayout>
        </GridLayout>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
