<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="middle"
        android:divider="@drawable/grid_divider"
        android:gravity="center">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:hint="@string/prompt_email"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:hint="@string/prompt_password"
        android:autofillHints="password"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:enabled="true"
                android:text="@string/action_sign_in" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>