<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.b07group47.taamcollectionmanager.AddItemFragment">

    <EditText
        android:id="@+id/editTextLotNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lot_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="409dp"
        android:layout_height="123dp"
        android:hint="@string/hint_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLotNumber" />

    <Spinner
        android:id="@+id/spinnerPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

    <EditText
        android:id="@+id/editTextGenre"
        android:layout_width="412dp"
        android:layout_height="97dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="123dp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="410dp"
        android:layout_height="92dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="220dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
